--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 wilmaVersion=1.0
 
-sonar.host.url=hosturl
-sonar.jdbc.username=userName
-sonar.jdbc.password=password
+sonar_host_url=hosturl
+sonar_jdbc_username=userName
+sonar_jdbc_password=password
