--- a/wilma-application/build.gradle
+++ b/wilma-application/build.gradle
@@ -28,6 +28,8 @@ allprojects  {
 
 ext.javaxServletApi='javax.servlet:javax.servlet-api:3.1.0'
 
+ext.componentFullName="wilma-$wilmaVersion.$buildNumber"
+
 task docs(type: Javadoc) {
     destinationDir = file("$buildDir/docs/all")
     options.memberLevel = JavadocMemberLevel.PRIVATE
@@ -89,7 +91,7 @@ def myCopySpec = project.copySpec {
      include 'config/formatters/ExampleTemplateFormatter.java'
    }
    from(rootProject.rootDir.absolutePath + '/wilma-application/modules/wilma-engine/build/libs/') {
-     include "wilma-$wilmaVersion.$buildNumber" + '.jar'
+     include componentFullName + '.jar'
    }
    from(rootProject.rootDir.absolutePath + '/wilma-application/resources/'){
      include 'certificate/wilma.cer'
@@ -117,6 +119,7 @@ task createDir {
 
 task release(type: Zip) {
 	dependsOn createDir
+	archiveName = componentFullName+'.zip'
     from rootProject.rootDir.absolutePath + '/wilma-application/release'
 }
 
