Added build number to release zip name

--- a/wilma-message-search/build.gradle
+++ b/wilma-message-search/build.gradle
@@ -90,6 +90,7 @@ task copyToRelease(type: Copy) {
 
 task release(type: Zip) {
     dependsOn copyToRelease
+    archiveName = "wilma-message-search-$wilmaVersion.$buildNumber"+'.zip'
     from rootProject.rootDir.absolutePath + '/wilma-message-search/release'
 }
 
