Fix message search folder paths

--- a/wilma-message-search/modules/wilma-message-search-engine/message.search.conf.properties
+++ b/wilma-message-search/modules/wilma-message-search-engine/message.search.conf.properties
@@ -24,10 +24,10 @@ webapp.port=9093
 jms.broker.port=16161
 
 # the folder the application stores the index files
-lucene.index.folder=/<somewhere>/wilma-message-search-deploy/wilma-message-search/index
+lucene.index.folder=/somewhere/wilma-message-search-deploy/wilma-message-search/index
 
 # the comma separated list of directories that will be indexed by the application
-message.folders=/<somewhere>/wilma-deploy/wilma/messages
+message.folders=/somewhere/wilma-deploy/wilma/messages
 
 #the cron expression which defines when the reindexing is run
 lucene.reindex.cron=0 0 4 * * ?
