--- a/browsermob-proxy/build.gradle
+++ b/browsermob-proxy/build.gradle
@@ -48,3 +48,8 @@ dependencies {
     compile group: 'org.seleniumhq.selenium', name: 'selenium-api', version:'2.29.1'
     testCompile group: 'junit', name: 'junit', version:'4.9'
 }
+
+task createPom << {
+    pom {
+    }.writeTo("$buildDir/pom.xml")
+}
