--- a/browsermob-proxy/build.gradle
+++ b/browsermob-proxy/build.gradle
@@ -49,7 +49,18 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version:'4.9'
 }
 
+jar {
+    manifest.attributes( 'provider': 'gradle')
+    manifest.attributes( 'Implementation-Title': "$componentName-v$version"+'.'+"$buildNumber")
+}
+
+task copyJarToDistributions (type: Copy) {
+    from(rootProject.rootDir.absolutePath + '/browsermob-proxy/build/libs/')
+	into(rootProject.rootDir.absolutePath + '/browsermob-proxy/build/distributions')
+}
+
 task createPom << {
     pom {
-    }.writeTo("$buildDir/pom.xml")
+    }.writeTo("$buildDir/distributions/browsermob-proxy-${version}.pom")
 }
+createPom.dependsOn(copyJarToDistributions)
