test client and server updates for load test

--- a/wilma-test/wilma-test-client/wilma.testclient.properties
+++ b/wilma-test/wilma-test-client/wilma.testclient.properties
@@ -1,5 +1,5 @@
 # where to send the request
-testserver.url=<set_testserver_url_here>/example
+testserver.url=<set_testserver_url_here>/perfexample
 # if true than the proxy configured below is used to send the requests
 client.proxy=true
 # the wilma proxy where the request should go through
@@ -13,3 +13,5 @@ accept_header=application/xml
 content_encoding=
 # the content encoding of the response (can be gzip)
 accept_encoding=
+# should we run this endlessly? if so, put "true" here
+endless_loop=false
