--- a/wilma-application/modules/wilma-engine/wilma.conf.properties
+++ b/wilma-application/modules/wilma-engine/wilma.conf.properties
@@ -113,10 +113,10 @@ interceptor=off
 block.localhost.usage=off
 
 # Sequence Handling - Switch between enabling/disabling the sequence handling functionality
-sequence.handling.state=on
+sequence.handling.state=off
 
 # Defines the interval of waiting for the sequence responses (in milliseconds)
-sequence.response.wait.interval=250
+sequence.response.wait.interval=500
 
 # the default timeout of sequences given in milliseconds
 sequence.timeout=9000
