--- a/wilma-application/modules/wilma-common/build.gradle
+++ b/wilma-application/modules/wilma-common/build.gradle
@@ -23,13 +23,11 @@ dependencies {
     compile project(':wilma-application:wilma-properties')
     compile group: 'com.sun.xml.fastinfoset', name: 'FastInfoset', version:'1.2.13'
     compile group: 'javax.jms', name: 'jms', version:'1.1'
-    compile(group: 'org.apache.activemq', name: 'activemq-core', version:'5.7.0') {
+    compile(group: 'org.apache.activemq', name: 'activemq-client', version:'5.11.1') {
         exclude(module: 'geronimo-jms_1.1_spec')
-        exclude(module: 'commons-codec')
     }
-    compile(group: 'org.apache.activemq', name: 'activemq-pool', version:'5.4.0') {
-    	exclude(module: 'commons-codec')
-    }
+    compile(group: 'org.apache.activemq', name: 'activemq-broker', version:'5.11.1');
+    compile(group: 'org.apache.activemq', name: 'activemq-pool', version:'5.11.1')
     compile group: 'org.apache.derby', name: 'derby', version:'10.1.1.0'
     compile group: 'org.springframework', name: 'spring-jms', version:'3.2.2.RELEASE'
     compile group: 'org.apache.bcel', name: 'bcel', version:'5.2'
