Resolved test-client test-server communication issue in performance test mode.

--- a/wilma-test/wilma-test-client/wilma.testclient.properties
+++ b/wilma-test/wilma-test-client/wilma.testclient.properties
@@ -6,12 +6,18 @@ client.proxy=true
 wilma.host=<specify_wilma_test_instance_host_here>
 wilma.port=<specify_wilma_test_instance_port_here>
 # the content type of the message to be sent (can be xml, fastinfoset)
-content_type=application/xml
+content.type=application/xml
 #the content type of the response(can be xml, fastinfoset)
-accept_header=application/xml
+accept.header=application/xml
 # the content encoding of the request body (can be gzip)
-content_encoding=
+content.encoding=
 # the content encoding of the response (can be gzip)
-accept_encoding=
+accept.encoding=
 # should we run this endlessly? if so, put "true" here
-endless_loop=false
+endless.loop=false
+# test client will wait this value between two sending (value is in milliseconds)
+pause.time=100
+#the size of the request buffer (value is in byte)
+http.socket.sendbuffer=10000
+#the size of the response buffer (value is in byte)
+http.socket.receivebuffer=14000000
