Implementation of #7 enhancement

--- a/wilma-application/modules/wilma-engine/wilma.conf.properties
+++ b/wilma-application/modules/wilma-engine/wilma.conf.properties
@@ -132,3 +132,5 @@ wilma.admin.hosts.file=
 # sequence cleaning is executed periodically. Time period can be given with cron expression.
 sequence.cleanup.cron=0 0/03 * * * *
 
+# The maximum value of displayed messages.
+message.log.UI.maxsize=500
