--- a/wilma-application/modules/wilma-engine/src/main/resources/conf/wilma/wilma.conf.validation.properties
+++ b/wilma-application/modules/wilma-engine/src/main/resources/conf/wilma/wilma.conf.validation.properties
@@ -104,3 +104,6 @@ stub.jar.path=#this not in {null}
 
 #this path must be relative path
 stub.sequence.handler.path=#this not in {null}
+
+#this value must be zero at least or greater, 
+message.log.UI.maxsize=#this not in {null} && #this >=0
