--- a/wilma-application/modules/wilma-browsermob-integration/build.gradle
+++ b/wilma-application/modules/wilma-browsermob-integration/build.gradle
@@ -17,6 +17,10 @@ You should have received a copy of the GNU General Public License
 along with Wilma.  If not, see <http://www.gnu.org/licenses/>.
 ===========================================================================*/
 
+repositories {
+  maven { url "file://C:/tmp/myRepo/" }
+}
+
 description = 'wilma browsermob integration'
 dependencies {
   compile project(':wilma-application:wilma-domain')
@@ -24,7 +28,7 @@ dependencies {
   compile project(':wilma-application:wilma-core')
   compile project(':wilma-application:wilma-properties')
 
-  compile ('com.epam.wilma:browsermob-proxy:2.0-beta-8-wilma-1.0.8'){
+  compile ('com.epam.wilma:browsermob-proxy:2.0-beta-8-wilma-1.1.9'){
   	exclude (module:'slf4j-jdk14')
   	exclude (module:'commons-logging')
   	exclude (module:'dom4j')
