--- a/wilma-message-search/modules/wilma-message-search-webapp/build.gradle
+++ b/wilma-message-search/modules/wilma-message-search-webapp/build.gradle
@@ -23,11 +23,11 @@ dependencies {
     compile group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version:'1.9.10'
     compile group: 'javax.inject', name: 'javax.inject', version:'1'
     compile group: 'com.google.code.gson', name: 'gson', version:'2.2.4'
-    compile group: 'org.eclipse.jetty', name: 'jetty-server', version:'9.1.0.M0'
-    compile group: 'org.eclipse.jetty', name: 'jetty-servlet', version:'9.1.0.M0'
-    compile group: 'org.eclipse.jetty', name: 'jetty-webapp', version:'9.1.0.M0'
-    compile group: 'org.eclipse.jetty', name: 'jetty-servlets', version:'9.1.0.M0'
-    compile group: 'org.eclipse.jetty', name: 'jetty-jsp', version:'9.1.0.M0'
+    compile group: 'org.eclipse.jetty', name: 'jetty-server', version:'9.2.10.v20150310'
+    compile group: 'org.eclipse.jetty', name: 'jetty-servlet', version:'9.2.10.v20150310'
+    compile group: 'org.eclipse.jetty', name: 'jetty-webapp', version:'9.2.10.v20150310'
+    compile group: 'org.eclipse.jetty', name: 'jetty-servlets', version:'9.2.10.v20150310'
+    compile group: 'org.eclipse.jetty', name: 'jetty-jsp', version:'9.2.10.v20150310'
     compile group: 'ch.qos.logback', name: 'logback-classic', version:'1.0.13'
     compile(group: 'org.slf4j', name: 'jcl-over-slf4j', version:'1.7.0') {
         exclude(module: 'slf4j-api')
