- upgrade Saxon-HE lib to version:9.6.0-5 - arrange common place of using local repo - when necessary

--- a/browsermob-proxy/build.gradle
+++ b/browsermob-proxy/build.gradle
@@ -69,7 +69,7 @@ createPom.dependsOn(copyJarToDistributions)
 uploadArchives {
     repositories {
         mavenDeployer {
-            repository(url: "file://localhost/tmp/myRepo/")
+            repository(url: "${myLocalRepository}")
         }
     }
 }
