--- a/wilma-application/modules/wilma-engine/build.gradle
+++ b/wilma-application/modules/wilma-engine/build.gradle
@@ -68,7 +68,7 @@ jar {
 }
 
 repositories {
-    maven { url "file://C:/tmp/myRepo/" }
+    maven { url "${myLocalRepository}" }
 }
 
 dependencies {
