--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,7 @@ subprojects {
                 from components.java
                 artifact sourceZip
                 pom.withXml {
-                    asNode().appendNode('description', 'Wilma - Test Stub and Proxy')
+                    asNode().appendNode('description', 'Wilma - Proxy and Service Stub')
                 }
             }
         }
@@ -72,6 +72,24 @@ sonarRunner {
 }
 
 project(":browsermob-proxy") {
+    sonarRunner {
+        skipProject = true
+    }
+}
+
+project(":wilma-functionaltest") {
+    sonarRunner {
+        skipProject = true
+    }
+}
+
+project(":wilma-test-server") {
+    sonarRunner {
+        skipProject = true
+    }
+}
+
+project(":wilma-test-client") {
     sonarRunner {
         skipProject = true
     }
