- fix functional test failure that is caused by browsermob-proxy rollback (connected to #3) - implement error log enhancement to address #42, message id is added to such error message

--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,5 @@ wilma-message-search/modules/wilma-message-search-engine/log
 build
 bin
 release
+wilma-functionaltest/resources/savedStubConfig.xml
 
