minor change in default lucene-index folder at wilma-ms

--- a/wilma-message-search/modules/wilma-message-search-engine/message.search.conf.properties
+++ b/wilma-message-search/modules/wilma-message-search-engine/message.search.conf.properties
@@ -24,10 +24,10 @@ webapp.port=9093
 jms.broker.port=16161
 
 # the folder the application stores the index files
-lucene.index.folder=wilma-message-search-deploy/wilma-message-search/index
+lucene.index.folder=indexes
 
 # the comma separated list of directories that will be indexed by the application
 message.folders=../wilma/messages
 
-#the cron expression which defines when the reindexing is run
+#the cron expression which defines when the re-indexing is run
 lucene.reindex.cron=0 0 4 * * ?
