--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 .classpath
 .checkstyle
 wilma-application/modules/wilma-engine/log
+wilma-application/modules/wilma-engine/messages
 wilma-message-search/modules/wilma-message-search-engine/log
 *.iml
 *.ipr
