make SonarQube connection more configurable for CI

--- a/build.gradle
+++ b/build.gradle
@@ -64,7 +64,7 @@ subprojects {
 sonarRunner {
     sonarProperties {
         property "sonar.host.url", "${sonar_host_url}"
-        property "sonar.jdbc.url", "jdbc:mysql://localhost:3306/sonar"
+        property "sonar.jdbc.url", "${sonar_jdbc_url}"
         property "sonar.jdbc.driverClassName", "com.mysql.jdbc.Driver"
         property "sonar.jdbc.username", "${sonar_jdbc_username}"
         property "sonar.jdbc.password", "${sonar_jdbc_password}"
