--- a/wilma-mock/build.gradle
+++ b/wilma-mock/build.gradle
@@ -29,7 +29,7 @@ version = "$wilmaVersion"
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
-mainClassName = 'com.epam.wilma.mock.client.WilmaMockClientApplication'
+mainClassName = 'com.epam.wilma.mock.client.WilmaMock'
 
 jar {
     manifest.attributes( 'provider': 'gradle')
@@ -45,4 +45,9 @@ dependencies {
     compile group: 'ch.qos.logback', name: 'logback-classic', version:'1.0.12'
     compile group: 'commons-httpclient', name: 'commons-httpclient', version:'3.1'
     compile group: 'commons-io', name: 'commons-io', version:'2.4'
+    compile group: 'commons-validator', name: 'commons-validator', version:'1.4.1'
+    compile group: 'org.json', name: 'json', version:'20141113'
+    compile group: 'com.google.guava', name: 'guava', version: '18.0'
+    testCompile group: 'org.mockito', name: 'mockito-all', version:'1.9.5'
+    testCompile group: 'org.testng', name: 'testng', version:'6.8.5'
 }
