--- a/wilma-mock/build.gradle
+++ b/wilma-mock/build.gradle
@@ -22,6 +22,7 @@ description = "wilma-mock"
 apply plugin: 'java'
 apply plugin: 'maven'
 apply plugin: 'application'
+apply plugin: 'checkstyle'
 
 group = 'com.epam.wilma.mock'
 version = "$wilmaVersion"
@@ -50,4 +51,33 @@ dependencies {
     compile group: 'com.google.guava', name: 'guava', version: '18.0'
     testCompile group: 'org.mockito', name: 'mockito-all', version:'1.9.5'
     testCompile group: 'org.testng', name: 'testng', version:'6.8.5'
+}
+
+checkstyle.configFile = file("$rootProject.rootDir/config/checkstyle/checkstyle.xml")
+checkstyle.configProperties = ['samedir' : "$rootProject.rootDir/config/checkstyle"]
+checkstyle.toolVersion = '5.6'
+checkstyle.ignoreFailures = true
+
+task jacocoReport(type: JacocoReport) {
+    dependsOn = subprojects.test
+    subprojects.each {
+        additionalSourceDirs = files(subprojects.sourceSets.main.allSource.srcDirs)
+        sourceDirectories = files(subprojects.sourceSets.main.allSource.srcDirs)
+        classDirectories = files(subprojects.sourceSets.main.output)
+        executionData = files(subprojects.jacocoTestReport.executionData)
+        reports {
+            html.enabled = true
+            xml.enabled = true
+            csv.enabled = false
+            html.destination "build/reports/jacoco"
+        }
+        onlyIf = {
+            true
+        }
+        doFirst {
+            executionData = files(executionData.findAll {
+                it.exists()
+            })
+        }
+    }
 }
