add version info to builds

--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ allprojects {
     apply plugin: 'idea'
     apply plugin: 'eclipse'
 
+    version = "$componentVersion"+'.'+"$buildNumber"
+
     repositories {
         jcenter()
     }
