--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ allprojects {
     apply plugin: 'idea'
     apply plugin: 'eclipse'
 
-    version = "$componentVersion"+'.'+"$buildNumber"
+    version = "$wilmaVersion"+'.'+"$buildNumber"
 
     repositories {
         jcenter()
