--- a/wilma-functionaltest/build.gradle
+++ b/wilma-functionaltest/build.gradle
@@ -19,6 +19,10 @@
 apply plugin: 'application'
 apply plugin: 'checkstyle'
 
+repositories {
+    maven { url "${myLocalRepository}" }
+}
+
 dependencies {
     compile "com.epam.gepard:gepard-core:4.0.35"
     compile 'commons-httpclient:commons-httpclient:3.1'
@@ -26,6 +30,7 @@ dependencies {
     compile 'org.apache.commons:commons-io:1.3.2'
     compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
     compile 'com.sun.xml.fastinfoset:FastInfoset:1.2.13'
+    compile "com.epam.wilma:wilma-mock:$version"
 }
 
 checkstyle.configFile = file("$rootProject.rootDir/config/checkstyle/checkstyle.xml")
