--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
-wilmaVersion=1.1
 buildNumber=DEV
 
 sonar_host_url=hosturl
 sonar_jdbc_username=userName
 sonar_jdbc_password=password
+sonar_jdbc_url=jdbcurl
