--- a/common.gradle
+++ b/common.gradle
@@ -1,5 +1,5 @@
 /*==========================================================================
-Copyright 2013-2015 EPAM Systems
+Copyright 2015 EPAM Systems
 
 This file is part of Wilma.
 
@@ -16,27 +16,38 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with Wilma.  If not, see <http://www.gnu.org/licenses/>.
 ===========================================================================*/
-apply plugin: "sonar-runner"
 
-subprojects {
-    apply from: new File(".").absolutePath + '/common.gradle'
+// Common local repository info
+ext.myLocalRepository='file://C:/tmp/myRepo/'
+ext.wilmaVersion=1.1
 
-    subprojects {
-        task allDeps(type: DependencyReportTask) {}
-    }
-}
+group = 'com.epam.wilma'
+apply plugin: 'idea'
+apply plugin: 'eclipse'
+apply plugin: 'checkstyle'
+apply plugin: 'java'
+apply plugin: 'maven'
+
+version = "$wilmaVersion"+'.'+"$buildNumber"
 
 repositories {
     jcenter()
     maven { url "http://repo.maven.apache.org/maven2" }
+    maven { url "${myLocalRepository}" }
 }
 
-sonarRunner {
-    sonarProperties {
-        property "sonar.host.url", "${sonar_host_url}"
-        property "sonar.jdbc.url", "${sonar_jdbc_url}"
-        property "sonar.jdbc.driverClassName", "com.mysql.jdbc.Driver"
-        property "sonar.jdbc.username", "${sonar_jdbc_username}"
-        property "sonar.jdbc.password", "${sonar_jdbc_password}"
-    }
+// Source and target info
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
+
+task sourceZip(type: Zip) {
+    from 'src'
+    baseName = "$componentName"
+    classifier 'sources'
+    extension 'jar'
 }
+
+checkstyle.configFile = file(new File(".").absolutePath + "/config/checkstyle/checkstyle.xml")
+checkstyle.configProperties = ['samedir' : new File(".").absolutePath + "/config/checkstyle"]
+checkstyle.toolVersion = '5.6'
+checkstyle.ignoreFailures = true
