--- a/wilma-mock/build.gradle
+++ b/wilma-mock/build.gradle
@@ -17,27 +17,23 @@ You should have received a copy of the GNU General Public License
 along with Wilma.  If not, see <http://www.gnu.org/licenses/>.
 ===========================================================================*/
 
-description = "wilma-mock"
+ext.componentDescription = "Wilma-Mock"
 
+apply plugin: 'maven-publish'
 apply plugin: 'application'
-apply plugin: 'checkstyle'
 apply plugin: 'jacoco'
-
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
+apply plugin: "sonar-runner"
+apply from: '../common.gradle'
 
 mainClassName = 'com.epam.wilma.mock.client.WilmaMock'
 
 jar {
     manifest.attributes( 'provider': 'gradle')
     manifest.attributes( 'Main-Class': mainClassName)
-    manifest.attributes( 'Implementation-Title': "$componentName-v$version")
+    manifest.attributes( 'Implementation-Title': "$componentDescription - V$version")
     archiveName = "$componentName-$version"+'.jar'
 } 
 
-repositories {
-     maven { url "http://repo.maven.apache.org/maven2" }
-}
 dependencies {
     compile group: 'org.slf4j', name: 'slf4j-api', version:'1.7.5'
     compile group: 'ch.qos.logback', name: 'logback-classic', version:'1.0.12'
@@ -49,11 +45,6 @@ dependencies {
     testCompile group: 'org.mockito', name: 'mockito-all', version:'1.9.5'
     testCompile group: 'org.testng', name: 'testng', version:'6.8.5'
 }
-
-checkstyle.configFile = file("$rootProject.rootDir/config/checkstyle/checkstyle.xml")
-checkstyle.configProperties = ['samedir' : "$rootProject.rootDir/config/checkstyle"]
-checkstyle.toolVersion = '5.6'
-checkstyle.ignoreFailures = true
 
 test.useTestNG()
 
@@ -88,15 +79,28 @@ task jacocoReport(type: JacocoReport) {
         }
 }
 
+
 task copyJarToDistributions (type: Copy) {
     dependsOn(sourceZip)
-    from(rootProject.rootDir.absolutePath + '/wilma-mock/build/libs/')
-    into(rootProject.rootDir.absolutePath + '/wilma-mock/build/distributions')
+    from("$buildDir/libs/")
+    into("$buildDir/distributions")
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+            artifact sourceZip
+            pom.withXml {
+                asNode().appendNode('description', 'Wilma - Mock Service Library')
+            }
+        }
+    }
 }
 
 task createPom << {
     pom {
-    }.writeTo("$buildDir/distributions/wlima-mock-$version"+'.pom')
+    }.writeTo("$buildDir/distributions/$componentName-${version}.pom")
 }
 createPom.dependsOn(copyJarToDistributions)
 
@@ -105,5 +109,15 @@ uploadArchives {
         mavenDeployer {
             repository(url: "${myLocalRepository}")
         }
+    }
+}
+
+sonarRunner {
+    sonarProperties {
+        property "sonar.host.url", "${sonar_host_url}"
+        property "sonar.jdbc.url", "${sonar_jdbc_url}"
+        property "sonar.jdbc.driverClassName", "com.mysql.jdbc.Driver"
+        property "sonar.jdbc.username", "${sonar_jdbc_username}"
+        property "sonar.jdbc.password", "${sonar_jdbc_password}"
     }
 }
