--- a/wilma-mock/gradle.properties
+++ b/wilma-mock/gradle.properties
@@ -1,2 +1,7 @@
 componentName=wilma-mock
 buildNumber=DEV
+
+sonar_host_url=hosturl
+sonar_jdbc_username=userName
+sonar_jdbc_password=password
+sonar_jdbc_url=jdbcurl
