--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ You should have received a copy of the GNU General Public License
 along with Wilma.  If not, see <http://www.gnu.org/licenses/>.
 ===========================================================================*/
 apply plugin: "sonar-runner"
+apply from: '/common.gradle'
 
 subprojects {
     apply from: new File(".").absolutePath + '/common.gradle'
