--- a/wilma-application/modules/wilma-engine/build.gradle
+++ b/wilma-application/modules/wilma-engine/build.gradle
@@ -17,7 +17,7 @@ You should have received a copy of the GNU General Public License
 along with Wilma.  If not, see <http://www.gnu.org/licenses/>.
 ===========================================================================*/
 
-description = 'wilma engine'
+ext.componentDescription = "Wilma - Service Stub and Transparent Proxy"
 buildscript {
     repositories { jcenter() }
     dependencies {
@@ -56,15 +56,16 @@ shadowJar {
         'activemq.xsd.*',
         'about.html']
 
-    archiveName = "wilma-$version.$buildNumber"+'.jar'
+    archiveName = "wilma-$version"+'.jar'
 }
 
 jar {
     manifest.attributes( 'provider': 'gradle')
     manifest.attributes( 'Main-Class': mainClassName)
-    manifest.attributes( 'Implementation-Title': "$componentName-v$version"+'.'+"$buildNumber")
-    
-	finalizedBy shadowJar
+    manifest.attributes( 'Implementation-Title': "$componentDescription -     V$version")
+    archiveName = "$componentName-$version"+'.jar'
+
+    finalizedBy shadowJar
 }
 
 repositories {
