--- a/wilma-functionaltest/build.gradle
+++ b/wilma-functionaltest/build.gradle
@@ -23,7 +23,7 @@ dependencies {
     compile "com.epam.gepard:gepard-core:4.0.35"
     compile 'commons-httpclient:commons-httpclient:3.1'
     compile 'org.custommonkey.xmlunit:com.springsource.org.custommonkey.xmlunit:1.2.0'
-    compile 'org.apache.commons:commons-io:1.3.2'
+    compile 'commons-io:commons-io:2.4'
     compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
     compile 'com.sun.xml.fastinfoset:FastInfoset:1.2.13'
     compile "com.epam.wilma:wilma-mock:$version"
