--- a/wilma-message-search/modules/wilma-message-search-engine/build.gradle
+++ b/wilma-message-search/modules/wilma-message-search-engine/build.gradle
@@ -17,7 +17,7 @@
  along with Wilma.  If not, see <http://www.gnu.org/licenses/>.
 ===========================================================================*/
 
-description= 'Wilma Message Search Engine'
+ext.componentDescription = "Wilma - Message Search Engine"
 
 apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'application'
@@ -46,9 +46,9 @@ dependencies {
 }
 
 jar {
-        manifest.attributes( 'provider': 'gradle')
-        manifest.attributes( 'Main-Class': 'com.epam.wilma.message.search.engine.MessageSearchApplication')
-        manifest.attributes( 'Implementation-Title': componentName + "-V" + wilmaVersion + "."+ buildNumber)
+    manifest.attributes( 'provider': 'gradle')
+    manifest.attributes( 'Main-Class': 'com.epam.wilma.message.search.engine.MessageSearchApplication')
+    manifest.attributes( 'Implementation-Title': "$componentDescription - V$version")
 }
 
 shadowJar {
