- fix build/release for browsermob-proxy part, to prepare new release, #38, #14 - increase proxy timeout from 1 minute to 4 minutes (when in case of timeout, -998 error code is generated)

--- a/browsermob-proxy/build.gradle
+++ b/browsermob-proxy/build.gradle
@@ -21,6 +21,8 @@ ext.componentDescription = "BrowserMob Proxy - tuned for Wilma"
 
 apply from: '../common.gradle'
 
+version = "2.0-beta-8-wilma-" + "$wilmaVersion"+'.'+"$buildNumber"
+
 repositories {
     maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
 }
