--- a/wilma-application/modules/wilma-browsermob-integration/build.gradle
+++ b/wilma-application/modules/wilma-browsermob-integration/build.gradle
@@ -28,6 +28,7 @@ dependencies {
   compile project(':wilma-application:wilma-core')
   compile project(':wilma-application:wilma-properties')
 
+//  compile ("com.epam.wilma:browsermob-proxy:2.0-beta-8-wilma-$version"){
   compile ('com.epam.wilma:browsermob-proxy:2.0-beta-8-wilma-1.0.8'){
   	exclude (module:'slf4j-jdk14')
   	exclude (module:'commons-logging')
