second try on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,17 @@
 language: java
-script:
-  - mkdir /opt/wilma/repo/
-  - ./gradlew -b browsermob-proxy/build.gradle build createPom uploadArchives -x checkstyleMain -x checkstyleTest -PlocalRepository=file:///opt/wilma/repo/
-  - ./gradlew build release -PlocalRepository=file:///opt/wilma/repo/
-  - ./gradlew -b wilma-mock/build.gradle build createPom uploadArchives
-  - ./gradlew -b wilma-test/wilma-test-client/build.gradle build -x checkstyleMain -x checkstyleTest
-  - ./gradlew -b wilma-test/wilma-test-server/build.gradle build -x checkstyleMain -x checkstyleTest
-  - ./gradlew -b wilma-functionaltest/build.gradle build
 jdk:
-  - oraclejdk7
-  - oraclejdk8
+ - oraclejdk7
+before_install:
+ - chmod +x gradlew
+script:
+ - mkdir /opt/wilma/repo/
+ - ./gradlew -b browsermob-proxy/build.gradle build createPom uploadArchives -x checkstyleMain -x checkstyleTest -PlocalRepository=file:///opt/wilma/repo/ -PbuildNumber=$TRAVIS_BUILD_ID
+ - ./gradlew build release -PlocalRepository=file:///opt/wilma/repo/
+ - ./gradlew -b wilma-mock/build.gradle build createPom uploadArchives -PbuildNumber=$TRAVIS_BUILD_ID
+ - ./gradlew -b wilma-test/wilma-test-client/build.gradle build -x checkstyleMain -x checkstyleTest -PbuildNumber=$TRAVIS_BUILD_ID
+ - ./gradlew -b wilma-test/wilma-test-server/build.gradle build -x checkstyleMain -x checkstyleTest -PbuildNumber=$TRAVIS_BUILD_ID
+ - ./gradlew -b wilma-mock/build.gradle clean build createPom uploadArchives
+ - ./gradlew -b wilma-functionaltest/build.gradle build
 branches:
   only:
   - master
