still working on travis-ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,13 @@ before_install:
 install:
  - mkdir $HOME/localrepo/
 script:
- - ./gradlew -b browsermob-proxy/build.gradle build createPom uploadArchives -x checkstyleMain -x checkstyleTest -PlocalRepository=file:///$HOME/localrepo/ -PbuildNumber=TRAVIS_BUILD_NUMBER
+ - ./gradlew -b browsermob-proxy/build.gradle build createPom uploadArchives -x checkstyleMain -x checkstyleTest -PlocalRepository=file:///$HOME/localrepo/ -PbuildNumber=$TRAVIS_BUILD_NUMBER
  - ./gradlew build release -PlocalRepository=file:///$HOME/localrepo/
- - ./gradlew -b wilma-mock/build.gradle build createPom uploadArchives -PbuildNumber=TRAVIS_BUILD_NUMBER
- - ./gradlew -b wilma-test/wilma-test-client/build.gradle build -x checkstyleMain -x checkstyleTest -PbuildNumber=TRAVIS_BUILD_NUMBER
- - ./gradlew -b wilma-test/wilma-test-server/build.gradle build -x checkstyleMain -x checkstyleTest -PbuildNumber=TRAVIS_BUILD_NUMBER
- - ./gradlew -b wilma-mock/build.gradle clean build createPom uploadArchives
- - ./gradlew -b wilma-functionaltest/build.gradle build
+ - ./gradlew -b wilma-service-api/build.gradle build createPom uploadArchives -PbuildNumber=$TRAVIS_BUILD_NUMBER
+ - ./gradlew -b wilma-test/wilma-test-client/build.gradle build -x checkstyleMain -x checkstyleTest -PbuildNumber=$TRAVIS_BUILD_NUMBER
+ - ./gradlew -b wilma-test/wilma-test-server/build.gradle build -x checkstyleMain -x checkstyleTest -PbuildNumber=$TRAVIS_BUILD_NUMBER
+ - ./gradlew -b wilma-service-api/build.gradle clean build createPom uploadArchives
+ - ./gradlew -b wilma-functionaltest/build.gradle build -PlocalRepository=file:///$HOME/localrepo/
 branches:
   only:
   - master
