--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,10 @@ install:
 script:
  - ./gradlew -b browsermob-proxy/build.gradle build createPom uploadArchives -x checkstyleMain -x checkstyleTest -PlocalRepository=file:///$HOME/localrepo/ -PbuildNumber=$TRAVIS_BUILD_NUMBER
  - ./gradlew build release -PlocalRepository=file:///$HOME/localrepo/
- - ./gradlew -b wilma-service-api/build.gradle build createPom uploadArchives -PbuildNumber=$TRAVIS_BUILD_NUMBER
+ - ./gradlew -b wilma-service-api/build.gradle build createPom uploadArchives -PlocalRepository=file:///$HOME/localrepo/ -PbuildNumber=$TRAVIS_BUILD_NUMBER
  - ./gradlew -b wilma-test/wilma-test-client/build.gradle build -x checkstyleMain -x checkstyleTest -PbuildNumber=$TRAVIS_BUILD_NUMBER
  - ./gradlew -b wilma-test/wilma-test-server/build.gradle build -x checkstyleMain -x checkstyleTest -PbuildNumber=$TRAVIS_BUILD_NUMBER
- - ./gradlew -b wilma-service-api/build.gradle clean build createPom uploadArchives
+ - ./gradlew -b wilma-service-api/build.gradle clean build createPom uploadArchives -PlocalRepository=file:///$HOME/localrepo/
  - ./gradlew -b wilma-functionaltest/build.gradle build -PlocalRepository=file:///$HOME/localrepo/
 branches:
   only:
