First working docker version of WIlma message Serach application (together with Wilma) added, see #61

--- a/config/docker/Dockerfile-Wilma
+++ b/config/docker/Dockerfile-Wilma
@@ -4,7 +4,8 @@ MAINTAINER Tamas Kohegyi <tkohegyi2@gmail.com>
 
 RUN \
   mkdir /data && \
-  cd /data && \
+  mkdir /data/wilma && \
+  cd /data/wilma && \
   apt-get update && \
   apt-get upgrade && \
   apt-get install -y apt-utils && \
