Wilma with message search application was updated. Both images starts automatically and configuration can be done by using docker parameters. See #61.

--- a/config/docker/Dockerfile-Wilma_and_Wilma_Message_Search
+++ b/config/docker/Dockerfile-Wilma_and_Wilma_Message_Search
@@ -1,4 +1,4 @@
-# this starts from wilma base, so just adds the message search related things
+# this starts from Wilma base, so just adds the message search related things
 FROM epam/wilma
 
 MAINTAINER Tamas Kohegyi <tkohegyi2@gmail.com>
@@ -8,7 +8,7 @@ RUN \
   mkdir /data/wilma/messages && \
   cd /data/wilma-ms && \
   apt-get update && \
-  apt-get upgrade && \
+  apt-get upgrade -y && \
   apt-get install -y openjdk-7-jdk && \
   rm -rf /var/libs/apt/lists/* && \
   wget https://github.com/epam/Wilma/releases/download/V1.1.73/wilma-message-search-1.1.73.zip && \
@@ -23,9 +23,12 @@ RUN \
 WORKDIR /data
 
 ENV JAVA_HOME /usr/lib/jvm/java-8-openjdk-amd64
+#ENV WILMA_MS_MX_SIZE - it has no default value
+ENV WILMA_MS_CONFIGURATION message.search.conf.properties
+#ENV WILMA_MS_JMX_PORT 9010 - note, if you use it, the port should be exposed too
 
 # you may start wilma and message search with default setting by /data/start_wilma_and_message_search.sh
-CMD ["bash"]
+CMD ["./start_wilma_and_message_search.sh"]
 
-# expose UI port and jmx port of message search
-EXPOSE 9093 9010
+# expose UI port of message search
+EXPOSE 9093
