--- a/config/docker/Dockerfile-Wilma
+++ b/config/docker/Dockerfile-Wilma
@@ -7,7 +7,7 @@ RUN \
   mkdir /data/wilma && \
   cd /data/wilma && \
   apt-get update && \
-  apt-get upgrade && \
+  apt-get upgrade -y && \
   apt-get install -y apt-utils && \
   apt-get install -y unzip && \
   apt-get install -y openjdk-7-jre && \
@@ -25,10 +25,10 @@ RUN \
 WORKDIR /data
 
 ENV JAVA_HOME /usr/lib/jvm/java-8-openjdk-amd64
+ENV WILMA_CONFIGURATION wilma.conf.properties
 #ENV WILMA_MX_SIZE - it has no default value
 #ENV WILMA_KEYSTORE - it has no default value
 #ENV WILMA_KEYSTORE_PASSWORD - it has no default value
-ENV WILMA_CONFIGURATION wilma.conf.properties
 #ENV WILMA_JMX_PORT 9011 - note, if you use it, the port should be exposed too!
 
 # you may start wilma with default settings by /data/start_wilma.sh
