--- a/wilma-application/modules/wilma-browsermob-integration/build.gradle
+++ b/wilma-application/modules/wilma-browsermob-integration/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 
 //  compile ("com.epam.wilma:browsermob-proxy:2.0-beta-8-wilma-$version"){
   compile ('com.epam.wilma:browsermob-proxy:2.0-beta-8-wilma-1.1.32'){
+//    compile ('com.epam.wilma:browsermob-proxy:2.0-beta-8-wilma-1.2.DEV'){
   	exclude (module:'slf4j-jdk14')
   	exclude (module:'commons-logging')
   	exclude (module:'dom4j')
