--- a/wilma-service-api-.net/WilmaServiceTestConsoleApp/WilmaServiceTestConsoleApp.csproj
+++ b/wilma-service-api-.net/WilmaServiceTestConsoleApp/WilmaServiceTestConsoleApp.csproj
@@ -49,7 +49,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\wilma-service-api\wilma-service-api\wilma-service-api.csproj">
+    <ProjectReference Include="..\wilma-service-api\wilma-service-api.csproj">
       <Project>{AC17AC7C-BF61-4750-951D-A1C09B32B5A1}</Project>
       <Name>wilma-service-api</Name>
     </ProjectReference>
