README-API.md generated and commited

--- a/wilma-service-api-net/wilma-service-api/wilma-service-api.csproj
+++ b/wilma-service-api-net/wilma-service-api/wilma-service-api.csproj
@@ -126,6 +126,9 @@
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\Vsxmd.1.1.0\build\Vsxmd.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Vsxmd.1.1.0\build\Vsxmd.targets'))" />
   </Target>
+  <PropertyGroup>
+    <PostBuildEvent>copy $(TargetDir)$(ProjectName).md $(SolutionDir)README-API.md</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
