Test Console App done, with nuget package

--- a/wilma-service-api-net/wilma-service-api-tests/wilma-service-api-tests.csproj
+++ b/wilma-service-api-net/wilma-service-api-tests/wilma-service-api-tests.csproj
@@ -95,9 +95,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\wilma-service-api\wilma-service-api.csproj">
-      <Project>{AC17AC7C-BF61-4750-951D-A1C09B32B5A1}</Project>
-      <Name>wilma-service-api</Name>
+    <ProjectReference Include="..\wilma-service-api\wilma-service-api-net.csproj">
+      <Project>{ac17ac7c-bf61-4750-951d-a1c09b32b5a1}</Project>
+      <Name>wilma-service-api-net</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
